--- a/Example.Angular/src/app/components/header/header.component.html
+++ b/Example.Angular/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar color="primary">
         <button mat-icon-button [routerLink]="['/']">
             <mat-icon>
-                Все пользователи
+                home
             </mat-icon>
         </button>
         <a mat-flat-button color="primary" [routerLink]="['/login']">
@@ -10,4 +10,3 @@
         </a>
     </mat-toolbar>
 </header>
-   
