--- a/Example.Angular/src/app/components/users/users.component.html
+++ b/Example.Angular/src/app/components/users/users.component.html
@@ -1,5 +1,5 @@
 <h1>Пользователи</h1>
-<p>Список пользователей для приложения</p>
+<p>Список пользователей для приложения1</p>
 
 <p *ngIf="!users"><em>Загрузка...</em></p>
 <table class='table table-striped' aria-labelledby="tableLabel" [hidden]="!users">
