--- a/Example.Angular/src/app/components/users/users.component.html
+++ b/Example.Angular/src/app/components/users/users.component.html
@@ -1,4 +1,4 @@
-<h1>Пользователи</h1>
+<h1>Пользователи из облака</h1>
 <p>Список пользователей для приложения1</p>
 
 <p *ngIf="!users"><em>Загрузка...</em></p>
